--- a/Config.json
+++ b/Config.json
@@ -1,16 +1,16 @@
 {
-  "TAXA_MUTACAO" : 0.1,
-  "ULTRAPASSAGEM_CROSSOVER" : 0.05,
-  "TAMANHO_GERACAO" : 300,
+  "TAXA_MUTACAO" : 0.3,
+  "ULTRAPASSAGEM_CROSSOVER" : 0.1,
+  "TAMANHO_GERACAO" : 150,
   "INTERVALO_CURVA" : [1, 25],
-  "N_SELECIONADOS" : 150,
+  "N_SELECIONADOS" : 30,
   "ANGULO_INCIDENCIA": 0,
   "FAIXA_ANTENA": [4.2, 4.9],
   "MODO": 1,
 
   "SENSIBILIDADE_FAIXA_ESPIRA": 5,
 
-  "PASSOS_ESPIRA" : 300,
+  "PASSOS_ESPIRA" : 200,
   "MAX_GERACOES_ESPIRA": 200,
   "MAX_REPETICAO_FITNESS_ESPIRA": 15,
   "OTIMIZACAO_ESPIRA" : "r",
@@ -19,25 +19,29 @@
   "INTERVALO_D/P_PRIMEIRO_ESPIRA": [0.25, 0.70],
   "INTERVALO_W/D_PRIMEIRO_ESPIRA": [0.08, 0.42],
 
-  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.002, 0.04],
-  "INTERVALO_D/P_PRIMEIRO_ARRANJO": [0.20, 0.9],
-  "INTERVALO_W/D_PRIMEIRO_ARRANJO": [0.10, 0.4],
+  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.010999, 0.011001],
+  "INTERVALO_D/P_PRIMEIRO_ARRANJO": [0.8749, 0.8751],
+  "INTERVALO_W/D_PRIMEIRO_ARRANJO": [0.18749, 0.18751],
 
-  "INTERVALO_PRIMEIRO_E": [0.9, 1.2],
-  "INTERVALO_PRIMEIRO_U": [0.99, 1.01],
-  "INTERVALO_SALISBURY": [13, 16],
+  "INTERVALO_PRIMEIRO_E": [0.9, 1.1],
+  "INTERVALO_PRIMEIRO_U": [0.999, 1.001],
+  "INTERVALO_SALISBURY": [15, 16],
 
-  "PASSOS_ARRANJO" : 80,
-  "MAX_GERACOES_ARRANJO": 3000,
-  "MAX_REPETICAO_FITNESS_ARRANJO": 600,
+  "PASSOS_ARRANJO" : 100,
+  "MAX_GERACOES_ARRANJO": 400,
+  "MAX_REPETICAO_FITNESS_ARRANJO": 20,
   "OTIMIZACAO_ARRANJO" : "a",
   "BUSCA_DIELETRICO" : false,
-  "ER" : 1.05,
+  "ER" : 1.01,
   "UR" : 1,
   "PESOS_ABSORCAO": [
-            [null, 4.2, 0.5],
-            [4.2, 4.9, 300],
-            [4.9, 20, 1],
-            [20, null, 1]
-        ]
+            [null, 4.2, 0],
+            [4.2, 5.2, 0],
+            [5.2, 22, 1],
+            [22, null, 1]
+        ],
+  "UTILIZAR_GROUND": false,
+  "METODO_FITNESS_ARRANJO": "sum_influence",
+
+  "MODE": "TRANSMITTING"
 }
