Correção da Pass-Band no arranjo e outros bugs.

--- a/Config.json
+++ b/Config.json
@@ -1,18 +1,18 @@
 {
-  "TAXA_MUTACAO" : 0.3,
-  "ULTRAPASSAGEM_CROSSOVER" : 0.1,
+  "TAXA_MUTACAO" : 0.5,
+  "ULTRAPASSAGEM_CROSSOVER" : 0.2,
   "TAMANHO_GERACAO" : 150,
   "INTERVALO_CURVA" : [1, 25],
-  "N_SELECIONADOS" : 30,
+  "N_SELECIONADOS" : 40,
   "ANGULO_INCIDENCIA": 0,
   "FAIXA_ANTENA": [4.2, 4.9],
   "MODO": 1,
 
-  "SENSIBILIDADE_FAIXA_ESPIRA": 5,
+  "SENSIBILIDADE_FAIXA_ESPIRA": 10,
 
-  "PASSOS_ESPIRA" : 200,
-  "MAX_GERACOES_ESPIRA": 200,
-  "MAX_REPETICAO_FITNESS_ESPIRA": 15,
+  "PASSOS_ESPIRA" : 500,
+  "MAX_GERACOES_ESPIRA": 500,
+  "MAX_REPETICAO_FITNESS_ESPIRA": 50,
   "OTIMIZACAO_ESPIRA" : "r",
 
   "INTERVALO_P_PRIMEIRO_ESPIRA": [0.006, 0.020],
@@ -25,11 +25,11 @@
 
   "INTERVALO_PRIMEIRO_E": [0.9, 1.1],
   "INTERVALO_PRIMEIRO_U": [0.999, 1.001],
-  "INTERVALO_SALISBURY": [15, 16],
+  "INTERVALO_SALISBURY": [13, 17],
 
   "PASSOS_ARRANJO" : 100,
-  "MAX_GERACOES_ARRANJO": 400,
-  "MAX_REPETICAO_FITNESS_ARRANJO": 20,
+  "MAX_GERACOES_ARRANJO": 1000,
+  "MAX_REPETICAO_FITNESS_ARRANJO": 100,
   "OTIMIZACAO_ARRANJO" : "a",
   "BUSCA_DIELETRICO" : false,
   "ER" : 1.01,
@@ -43,5 +43,5 @@
   "UTILIZAR_GROUND": false,
   "METODO_FITNESS_ARRANJO": "sum_influence",
 
-  "MODE": "TRANSMITTING"
+  "MODE": "RECEIVING"
 }
