Correção de bugs e tentativa de uso da Pass-Band no arranjo

--- a/Config.json
+++ b/Config.json
@@ -1,34 +1,42 @@
 {
-  "TAXA_MUTACAO" : 0.5,
-  "ULTRAPASSAGEM_CROSSOVER" : 0.2,
-  "TAMANHO_GERACAO" : 150,
+  "TAXA_MUTACAO" : 0.4,
+  "ULTRAPASSAGEM_CROSSOVER" : 0.1,
+  "TAMANHO_GERACAO" : 130,
   "INTERVALO_CURVA" : [1, 25],
-  "N_SELECIONADOS" : 40,
+  "N_SELECIONADOS" : 30,
   "ANGULO_INCIDENCIA": 0,
   "FAIXA_ANTENA": [4.2, 4.9],
   "MODO": 1,
 
   "SENSIBILIDADE_FAIXA_ESPIRA": 10,
 
-  "PASSOS_ESPIRA" : 500,
-  "MAX_GERACOES_ESPIRA": 500,
-  "MAX_REPETICAO_FITNESS_ESPIRA": 50,
+  "PASSOS_ESPIRA" : 300,
+  "MAX_GERACOES_ESPIRA": 200,
+  "MAX_REPETICAO_FITNESS_ESPIRA": 30,
   "OTIMIZACAO_ESPIRA" : "r",
 
-  "INTERVALO_P_PRIMEIRO_ESPIRA": [0.006, 0.020],
-  "INTERVALO_D/P_PRIMEIRO_ESPIRA": [0.25, 0.70],
-  "INTERVALO_W/D_PRIMEIRO_ESPIRA": [0.08, 0.42],
+  "INTERVALO_P_PRIMEIRO_ESPIRA": [0.011, 0.012],
+  "INTERVALO_D/P_PRIMEIRO_ESPIRA": [0.8, 0.9],
+  "INTERVALO_W/D_PRIMEIRO_ESPIRA": [0.05, 0.1],
 
-  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.010999, 0.011001],
-  "INTERVALO_D/P_PRIMEIRO_ARRANJO": [0.8749, 0.8751],
-  "INTERVALO_W/D_PRIMEIRO_ARRANJO": [0.18749, 0.18751],
+  "INTERVALO_P_PRIMEIRO_ESPIRA_VALIDO": [1e-4, 0.1],
+  "INTERVALO_D/P_PRIMEIRO_ESPIRA_VALIDO": [0.1, 0.98],
+  "INTERVALO_W/D_PRIMEIRO_ESPIRA_VALIDO": [0.01, 0.46],
+  "INTERVALO_R_PRIMEIRO_ESPIRA_VALIDO": [0, 600],
 
-  "INTERVALO_PRIMEIRO_E": [0.9, 1.1],
+  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.00999, 0.015001],
+  "INTERVALO_D/P_PRIMEIRO_ARRANJO": [0.5749, 0.89751],
+  "INTERVALO_W/D_PRIMEIRO_ARRANJO": [0.114, 0.485],
+
+  "INTERVALO_E/E0_PERMITIDO": [0.95, 1.6],
+  "INTERVALO_U/U0_PERMITIDO": [0.99, 1.1],
+
+  "INTERVALO_PRIMEIRO_E": [0.98, 1.1],
   "INTERVALO_PRIMEIRO_U": [0.999, 1.001],
-  "INTERVALO_SALISBURY": [13, 17],
+  "INTERVALO_SALISBURY": [14.9, 15.1],
 
-  "PASSOS_ARRANJO" : 100,
-  "MAX_GERACOES_ARRANJO": 1000,
+  "PASSOS_ARRANJO" : 60,
+  "MAX_GERACOES_ARRANJO": 3000,
   "MAX_REPETICAO_FITNESS_ARRANJO": 100,
   "OTIMIZACAO_ARRANJO" : "a",
   "BUSCA_DIELETRICO" : false,
@@ -36,12 +44,12 @@
   "UR" : 1,
   "PESOS_ABSORCAO": [
             [null, 4.2, 0],
-            [4.2, 5.2, 0],
-            [5.2, 22, 1],
+            [4.2, 6, 0],
+            [6, 22, 1],
             [22, null, 1]
         ],
   "UTILIZAR_GROUND": false,
-  "METODO_FITNESS_ARRANJO": "sum_influence",
+  "METODO_FITNESS_ARRANJO": "sum_sequence",
 
   "MODE": "RECEIVING"
 }
