--- a/Config.json
+++ b/Config.json
@@ -1,56 +1,56 @@
 {
   "TAXA_MUTACAO" : 0.1,
-  "ULTRAPASSAGEM_CROSSOVER" : 0.5,
-  "TAMANHO_GERACAO" : 130,
+  "ULTRAPASSAGEM_CROSSOVER" : 0.05,
+  "TAMANHO_GERACAO" : 100,
   "INTERVALO_CURVA" : [1, 25],
-  "N_SELECIONADOS" : 30,
+  "N_SELECIONADOS" : 25,
   "ANGULO_INCIDENCIA": 0,
   "FAIXA_ANTENA": [4.2, 4.9],
   "MODO": 1,
 
-  "SENSIBILIDADE_FAIXA_ESPIRA": 10,
+  "SENSIBILIDADE_FAIXA_ESPIRA": 5,
 
   "PASSOS_ESPIRA" : 300,
   "MAX_GERACOES_ESPIRA": 200,
   "MAX_REPETICAO_FITNESS_ESPIRA": 30,
   "OTIMIZACAO_ESPIRA" : "r",
 
-  "INTERVALO_P_PRIMEIRO_ESPIRA": [0.011, 0.012],
+  "INTERVALO_P_PRIMEIRO_ESPIRA": [0.006, 0.011],
   "INTERVALO_D/P_PRIMEIRO_ESPIRA": [0.8, 0.9],
   "INTERVALO_W/D_PRIMEIRO_ESPIRA": [0.05, 0.1],
 
-  "INTERVALO_P_PRIMEIRO_ESPIRA_VALIDO": [1e-4, 0.1],
+  "INTERVALO_P_PRIMEIRO_ESPIRA_VALIDO": [1e-4, 0.02],
   "INTERVALO_D/P_PRIMEIRO_ESPIRA_VALIDO": [0.1, 0.98],
   "INTERVALO_W/D_PRIMEIRO_ESPIRA_VALIDO": [0.01, 0.46],
-  "INTERVALO_R_PRIMEIRO_ESPIRA_VALIDO": [0, 0],
+  "INTERVALO_R_PRIMEIRO_ESPIRA_VALIDO": [0, 1000],
 
-  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.00999, 0.015001],
+  "INTERVALO_P_PRIMEIRO_ARRANJO": [0.0069, 0.012001],
   "INTERVALO_D/P_PRIMEIRO_ARRANJO": [0.5749, 0.89751],
   "INTERVALO_W/D_PRIMEIRO_ARRANJO": [0.114, 0.485],
-  "INTERVALO_R_PRIMEIRO_ARRANJO": [255, 265],
+  "INTERVALO_R_PRIMEIRO_ARRANJO": [100, 400],
 
   "INTERVALO_E/E0_PERMITIDO": [0.95, 1.6],
   "INTERVALO_U/U0_PERMITIDO": [0.99, 1.1],
 
   "INTERVALO_PRIMEIRO_E": [0.98, 1.1],
   "INTERVALO_PRIMEIRO_U": [0.999, 1.001],
-  "INTERVALO_SALISBURY": [14.9, 15.1],
+  "INTERVALO_SALISBURY": [14, 16],
 
   "PASSOS_ARRANJO" : 60,
-  "MAX_GERACOES_ARRANJO": 3000,
-  "MAX_REPETICAO_FITNESS_ARRANJO": 100,
+  "MAX_GERACOES_ARRANJO": 300,
+  "MAX_REPETICAO_FITNESS_ARRANJO": 50,
   "OTIMIZACAO_ARRANJO" : "a",
   "BUSCA_DIELETRICO" : false,
   "ER" : 1.01,
   "UR" : 1,
   "PESOS_ABSORCAO": [
-            [null, 4.2, 0],
-            [4.2, 6, -100],
-            [6, 10, 10],
-            [10, null, 1]
+            [null, 5, 1],
+            [5, 10, 1],
+            [10, 20, 1],
+            [20, null, 0]
         ],
   "UTILIZAR_GROUND": true,
-  "METODO_FITNESS_ARRANJO": "sum_sequence",
+  "METODO_FITNESS_ARRANJO": "compare_curve",
 
   "MODE": "RECEIVING"
 }
